# networkd-state

./: .gitignore  README.md  create_deb.bash  networkd-state.service  networkd-state@.target  setup.cfg  setup.py  stdeb.cfg
networkd_state/: create_target.py  networkd_state.py
