[metadata]
name = networkd-state
version = attr: networkd_state.__version__
author = Marcel Zeilinger
author_email = marcel.zeilinger@live.at
maintainer = Marcel Zeilinger
maintainer_email = marcel.zeilinger@live.at
classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: System :: Networking :: Monitoring
license = Apache License, Version 2.0
description = Network interface state targets
keywords = networkd systemd interface network

[options]
install_requires =
  gi
  dbus
packages = find:
zip_safe = false

[options.entry_points]
console_scripts =
    networkd-state-create-target = networkd_state.create_target:main
